@@ -1,0 +1,129 @@
+#!/usr/bin/perl
+
+=head1 NAME
+
+dh_dwz - optimize DWARF debug information in ELF binaries via dwz
+
+=cut
+
+use strict;
+use warnings;
+use File::Find;
+use Debian::Debhelper::Dh_Lib;
+
+our $VERSION = DH_BUILTIN_VERSION;
+
+=head1 SYNOPSIS
+
+B<dh_dwz> [S<I<debhelper options>>] [B<-X>I<item>] [S<B<--> I<params>>]
+
+=head1 DESCRIPTION
+
+B<Caveat>: This tool is experimental and may disappear or change
+behaviour without any notice.
+
+B<dh_dwz> is a debhelper program that will optimize the (uncompressed)
+size of the DWARF debug information in ELF binaries.  It does so by
+running L<dwz(1)> on all the ELF binaries in the package.
+
+=head1 OPTIONS
+
+=over 4
+
+=item B<-X>I<item>, B<--exclude=>I<item>
+
+Exclude files that contain I<item> anywhere in their filename from being
+stripped. You may use this option multiple times to build up a list of
+things to exclude.
+
+=item B<--> I<params>
+
+Pass I<params> to L<dwz(1)> when it processes ELF binaries.  This is
+mostly useful for setting memory related parameters (e.g. -l and -L).
+
+=back
+
+=head1 NOTES
+
+If the B<DEB_BUILD_OPTIONS> environment variable contains B<nostrip>,
+nothing will be stripped, in accordance with Debian policy (section
+10.1 "Binaries").
+
+While this tool technically does not remove debug information from
+binaries, it is still skipped when the B<DEB_BUILD_OPTIONS>
+environment variable contains B<nostrip>.  This is because B<nostrip>
+is often used to optimize build times (e.g. for "build and
+test"-cycles) rather than optimizing for size.
+
+=cut
+
+init();
+
+# This variable can be used to turn off stripping (see Policy).
+exit 0 if get_buildoption('nostrip');
+
+warning('This tool is experimental and may change (or be retired) without any notice');
+
+my @elf_files;
+
+sub testfile {
+	my $fn = $_;
+	return if -l $fn; # Always skip symlinks.
+
+	# See if we were asked to exclude this file.
+	# Note that we have to test on the full filename, including directory.
+	foreach my $f (@{$dh{EXCLUDE}}) {
+		if ($fn =~ m/\Q$f\E/) {
+			$File::Find::prune = 1 if -d _;
+			return;
+		}
+	}
+	return if -d _;
+	# Do not process output files from dwz
+	return if index($fn, '/debug/.dwz/') > -1;
+	if (is_so_or_exec_elf_file($fn)) {
+		push(@elf_files, $fn);
+	}
+	return;
+}
+
+for my $package (@{$dh{DOPACKAGES}}) {
+	my $tmp = tmpdir($package);
+
+	next if not -d $tmp;
+
+	@elf_files = ();
+	find({
+			wanted => \&testfile,
+			no_chdir => 1,
+		 }, $tmp);
+	next if not @elf_files;
+	# Consistent order;
+	@elf_files = sort(@elf_files);
+	my ($unique_files, $hardlinks) = find_hardlinks(@elf_files);
+
+	# TODO: Support multifile (-m)
+
+	xargs($unique_files, 'dwz', '-q', @{$dh{U_PARAMS}}, '--');
+	# Now change over any files we can that used to be hard links so
+	# they are again.
+	for my $hardlink (keys %{$hardlinks}) {
+		my $target = $hardlinks->{$hardlink};
+		# Remove old file.
+		rm_files($hardlink);
+		# Make new hardlink.
+		doit('ln', '-f', $target, $hardlink);
+	}
+}
+
+=head1 SEE ALSO
+
+L<debhelper(7)>
+
+This program is a part of debhelper.
+
+=head1 AUTHOR
+
+Niels Thykier <niels@thykier.net>
+
+=cut
